--- a/.github/workflows/get-caller-identity.yml
+++ b/.github/workflows/get-caller-identity.yml
@@ -12,7 +12,7 @@ jobs:
       - name: Configure AWS credentials from Test account
         uses: aws-actions/configure-aws-credentials@v4
         with:
-          role-to-assume: arn:aws:iam::${{ secrets.AWS_ACCOUNT_ID }}:role/GitHub_Actions_Role
+          role-to-assume: arn:aws:iam::846404886105:role/GitHub_Actions_Role
           aws-region: us-east-1
       - name: Fetch the caller identity
         run: |
